--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevConnect</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/section1.css">
     <link rel="stylesheet" href="./css/section2.css">
 </head>
 <body>
@@ -32,21 +33,46 @@
                     <button class="btn">Publicar Vaga</button>
                     <button class="btn">Quero Trabalhar</button>
                 </div>
-            
             </div>
+            <div class="final"></div>
         </section>
         <section class="sct-dois">
             <div class="content">
                 <h2>Como funciona?</h2>
                 <h4>Anuncie o seus serviços facilmente, contrate desenvolvedores e pague com segurança.</h4>
-                <!-- <div class="imgs">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="cards">
+                 <article class="card-article" id="1">
+                    <div class="card-img">
+                        <img src="./assets/file-blank-regular-24.jpg.png" alt="">
+                    </div>
 
-                </div> -->
-            </div>
+                    <div class="card-info">
+                        <h2>Publique a sua vaga para milhares de profissionais, você irá receber propostas de desenvolvedores talentosos em poucos minutos.</h2>
+
+                    </div>
+                </article>
+
+                <article class="card-article" id="1">
+                    <div class="card-img">
+                        <img src="./assets/user-regular-24.jpg.png" alt="">
+                    </div>
+
+                    <div class="card-info">
+                        <h2>Reveja o histórico de trabalho, feedback de clientes e portfólio para limitar os candidatos. Então escolha o melhor.</h2>
+
+                    </div>
+                </article>
+
+                <article class="card-article" id="1">
+                    <div class="card-img">
+                        <img src="./assets/shield-regular-24j.pg.png" alt="">
+                    </div>
+
+                    <div class="card-info">
+                        <h2>Com a navegação segura do DevConnect, os seus dados estarão bem guardados.</h2>
+
+                    </div>
+                </article>
         </section>
         <section>
             <div>
